- readOnly fix - styling nav bar items - collapsable segments

--- a/styles.css
+++ b/styles.css
@@ -115,6 +115,7 @@ a {
   padding: 20px;
 }
 
-.segment {
-  padding-left: 30px !important;
+.active-item {
+  background-color: rgba(0, 0, 0, 0.2) !important;
+  opacity: 1 !important;
 }
